# staking-program-anchor

./: Anchor.toml
programs/stake-anchor/: Cargo.toml
programs/stake-anchor/src/: lib.rs
tests/: stake-anchor.ts
